общий сетап страницы

--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
     <title>Mesto</title>
 </head>
 <body>
-    <header></header>
-    <main></main>
-    <footer></footer>
+    <div class="page">
+      <header class="header"></header>
+			<main></main>
+			<footer></footer>  
+    </div>
 </body>
 </html>
