--- a/index.html
+++ b/index.html
@@ -3,12 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="pages/index.css">
+    <link rel="stylesheet" href="./pages/index.css">
     <title>Mesto</title>
 </head>
 <body>
     <div class="page">
-      <header class="header"></header>
+      <header class="header">
+				<a href="https://weeks6.github.io/mesto" class="header__logo"></a>
+			</header>
+			<div class="header-line"></div>
 			<main></main>
 			<footer></footer>  
     </div>
