--- a/index.html
+++ b/index.html
@@ -34,8 +34,55 @@
 						</svg>
 					</button>
 				</section>
+				<section>
+					<ul class="elements">
+						<li class="card">
+							<div class="card__image"></div>
+							<div class="card__info">
+								<h2 class="card__title">Алтай</h2>
+								<button class="like-button"></button>								
+							</div>
+						</li>
+						<li class="card">
+							<div class="card__image"></div>
+							<div class="card__info">
+								<h2 class="card__title">Гора Эльбрус</h2>
+								<button class="like-button"></button>								
+							</div>
+						</li>
+						<li class="card">
+							<div class="card__image"></div>
+							<div class="card__info">
+								<h2 class="card__title">Домбай</h2>
+								<button class="like-button"></button>								
+							</div>
+						</li>
+						<li class="card">
+							<div class="card__image"></div>
+							<div class="card__info">
+								<h2 class="card__title">Гора Эльбрус</h2>
+								<button class="like-button"></button>								
+							</div>
+						</li>
+						<li class="card">
+							<div class="card__image"></div>
+							<div class="card__info">
+								<h2 class="card__title">Домбай</h2>
+								<button class="like-button"></button>								
+							</div>
+						</li>
+						<li class="card">
+							<div class="card__image"></div>
+							<div class="card__info">
+								<h2 class="card__title">Карачаево-Черкесия</h2>
+								<button class="like-button"></button>								
+							</div>
+						</li>
+					</ul>
+				</section>
 			</main>
 			<footer></footer>  
-    </div>
+	</div>
+	<script src="./script.js"></script>
 </body>
 </html>
