--- a/index.html
+++ b/index.html
@@ -37,42 +37,54 @@
 				<section>
 					<ul class="elements">
 						<li class="card">
-							<div class="card__image"></div>
+							<div class="card__image-container">
+								<img src="./images/altai.jpg" alt="Алтай" class="card__image">
+							</div>
 							<div class="card__info">
 								<h2 class="card__title">Алтай</h2>
 								<button class="like-button"></button>								
 							</div>
 						</li>
 						<li class="card">
-							<div class="card__image"></div>
+							<div class="card__image-container">
+								<img src="./images/elbrus.png" alt="Эльбрус" class="card__image">
+							</div>
 							<div class="card__info">
-								<h2 class="card__title">Гора Эльбрус</h2>
+								<h2 class="card__title">Эльбрус</h2>
 								<button class="like-button"></button>								
 							</div>
 						</li>
 						<li class="card">
-							<div class="card__image"></div>
-							<div class="card__info">
-								<h2 class="card__title">Домбай</h2>
-								<button class="like-button"></button>								
+							<div class="card__image-container">
+								<img src="./images/dombay.png" alt="Домбай" class="card__image">
 							</div>
-						</li>
-						<li class="card">
-							<div class="card__image"></div>
-							<div class="card__info">
-								<h2 class="card__title">Гора Эльбрус</h2>
-								<button class="like-button"></button>								
-							</div>
-						</li>
-						<li class="card">
-							<div class="card__image"></div>
 							<div class="card__info">
 								<h2 class="card__title">Домбай</h2>
 								<button class="like-button"></button>								
 							</div>
 						</li>
 						<li class="card">
-							<div class="card__image"></div>
+							<div class="card__image-container">
+								<img src="./images/elbrus.png" alt="Эльбрус" class="card__image">
+							</div>
+							<div class="card__info">
+								<h2 class="card__title">Эльбрус</h2>
+								<button class="like-button"></button>								
+							</div>
+						</li>
+						<li class="card">
+							<div class="card__image-container">
+								<img src="./images/dombay.png" alt="Домбай" class="card__image">
+							</div>
+							<div class="card__info">
+								<h2 class="card__title">Домбай</h2>
+								<button class="like-button"></button>								
+							</div>
+						</li>
+						<li class="card">
+							<div class="card__image-container">
+								<img src="./images/karachaevsk.png" alt="Карачаево-Черкесия" class="card__image">
+							</div>>
 							<div class="card__info">
 								<h2 class="card__title">Карачаево-Черкесия</h2>
 								<button class="like-button"></button>								
