--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 						<li class="card">
 							<div class="card__image-container">
 								<img src="./images/karachaevsk.png" alt="Карачаево-Черкесия" class="card__image">
-							</div>>
+							</div>
 							<div class="card__info">
 								<h2 class="card__title">Карачаево-Черкесия</h2>
 								<button class="like-button"></button>								
