сверстать блок подвала

--- a/index.html
+++ b/index.html
@@ -93,7 +93,9 @@
 					</ul>
 				</section>
 			</main>
-			<footer></footer>  
+			<footer class="footer container">
+				<p class="footer__title">© 2020 Mesto Russia</p>
+			</footer>  
 	</div>
 	<script src="./script.js"></script>
 </body>
