--- a/index.html
+++ b/index.html
@@ -8,6 +8,25 @@
 </head>
 <body>
     <div class="page">
+		<div class="popup">
+			<div class="popup__container">
+				<div class="popup__inner container">
+					<button class="close-button">
+						<svg class="close-button__icon" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
+							<path d="M28.5709 0.286517L16.0001 12.8573L3.4293 0.286515L0.286608 3.42921L12.8574 16L0.286608 28.5708L3.4293 31.7135L16.0001 19.1427L28.5709 31.7135L31.7136 28.5708L19.1428 16L31.7136 3.42921L28.5709 0.286517Z" fill="white"/>
+						</svg>				
+					</button>
+					<form class="edit-form">
+						<div class="edit-form__inner">
+							<h1 class="popup__title">Редактировать профиль</h1>
+							<input type="text" class="edit-form__field edit-form__field_name" placeholder="Имя">
+							<input type="text" class="edit-form__field edit-form__field_about" placeholder="О себе">
+							<button class="save-button" type="submit">Сохранить</button>
+						</div>
+					</form>
+				</div>
+			</div>
+		</div>
       <header class="header container">
 				<a href="https://weeks6.github.io/mesto" class="header__logo"></a>
 			</header>
@@ -26,7 +45,7 @@
 								</svg>									
 							</button>
 						</div>
-						<p class="profile-info__title">Исследователь океана</p>
+						<p class="profile-info__about">Исследователь океана</p>
 					</div> 
 					<button class="add-button">
 						<svg class="add-button__icon" viewBox="0 0 22 22" fill="none" xmlns="http://www.w3.org/2000/svg">
