--- a/index.html
+++ b/index.html
@@ -11,11 +11,7 @@
 		<div class="popup">
 			<div class="popup__container">
 				<div class="popup__inner container">
-					<button class="close-button">
-						<svg class="close-button__icon" viewbox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
-							<path d="M28.5709 0.286517L16.0001 12.8573L3.4293 0.286515L0.286608 3.42921L12.8574 16L0.286608 28.5708L3.4293 31.7135L16.0001 19.1427L28.5709 31.7135L31.7136 28.5708L19.1428 16L31.7136 3.42921L28.5709 0.286517Z" fill="white"/>
-						</svg>				
-					</button>
+					<button class="close-button"></button>
 					<form class="edit-form">
 						<div class="edit-form__inner">
 							<h1 class="popup__title">Редактировать профиль</h1>
@@ -28,7 +24,7 @@
 			</div>
 		</div>
       <header class="header container">
-				<a href="https://weeks6.github.io/mesto" class="header__logo"></a>
+				<a href="https://weeks6.github.io/mesto" class="header__logo" target="_self"></a>
 			</header>
 			<div class="header-line"></div>
 			<main class="container">
@@ -39,19 +35,11 @@
 					<div class="profile-info">
 						<div class="profile-info__inner">
 							<h1 class="profile-info__name">Жак-Ив Кусто</h1>
-							<button class="edit-button">
-								<svg class="edit-button__icon" viewbox="0 0 10 10" fill="none" xmlns="http://www.w3.org/2000/svg">
-									<path d="M10 1.32827L2.60377 8.7666L1.28302 7.41936L8.66038 0L10 1.32827ZM0 10L1.96226 9.41177L0.584906 8.08349L0 10Z" fill="white"/>
-								</svg>									
-							</button>
+							<button class="edit-button"></button>
 						</div>
 						<p class="profile-info__about">Исследователь океана</p>
 					</div> 
-					<button class="add-button">
-						<svg class="add-button__icon" viewbox="0 0 22 22" fill="none" xmlns="http://www.w3.org/2000/svg">
-							<path d="M22 9.77778H12.2222V0H9.77778V9.77778H0V12.2222H9.77778V22H12.2222V12.2222H22V9.77778Z" fill="white"/>
-						</svg>
-					</button>
+					<button class="add-button"></button>
 				</section>
 				<section>
 					<ul class="elements">
