исправить замечания по полям форм

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 					<form class="edit-form" name="edit-form">
 						<div class="edit-form__inner">
 							<h1 class="popup__title">Редактировать профиль</h1>
-							<input type="text" class="edit-form__field edit-form__field_name" name="field_name" placeholder="Имя">
-							<input type="text" class="edit-form__field edit-form__field_about" name="field_about" placeholder="О себе">
+							<input type="text" class="edit-form__field edit-form__field_type_name" name="field_name" placeholder="Имя" required>
+							<input type="text" class="edit-form__field edit-form__field_type_about" name="field_about" placeholder="О себе" required>
 							<button class="button button_type_save" type="submit">Сохранить</button>
 						</div>
 					</form>
