загрузка карточек из скрипта

--- a/index.html
+++ b/index.html
@@ -25,49 +25,6 @@
 				</section>
 				<section>
 					<ul class="elements">
-						<li class="card">
-							<img src="./images/altai.jpg" alt="Алтай" class="card__image">
-							<div class="card__info">
-								<h2 class="card__title">Алтай</h2>
-								<button type="button" aria-label="Нравится" class="button button_type_like"></button>								
-							</div>
-						</li>
-						<li class="card">
-							<img src="./images/elbrus.png" alt="Эльбрус" class="card__image">
-							<div class="card__info">
-								<h2 class="card__title">Эльбрус</h2>
-								<button type="button" aria-label="Нравится" class="button button_type_like"></button>								
-							</div>
-						</li>
-						<li class="card">
-							<img src="./images/dombay.png" alt="Домбай" class="card__image">
-							<div class="card__info">
-								<h2 class="card__title">Домбай</h2>
-								<button type="button" aria-label="Нравится" class="button button_type_like"></button>																
-							</div>
-						</li>
-						<li class="card">
-							<img src="./images/elbrus.png" alt="Эльбрус" class="card__image">
-							<div class="card__info">
-								<h2 class="card__title">Эльбрус</h2>
-								<button type="button" aria-label="Нравится" class="button button_type_like"></button>								
-							
-							</div>
-						</li>
-						<li class="card">
-							<img src="./images/dombay.png" alt="Домбай" class="card__image">
-							<div class="card__info">
-								<h2 class="card__title">Домбай</h2>
-								<button type="button" aria-label="Нравится" class="button button_type_like"></button>								
-							</div>
-						</li>
-						<li class="card">
-							<img src="./images/karachaevsk.png" alt="Карачаево-Черкесия" class="card__image">
-							<div class="card__info">
-								<h2 class="card__title">Карачаево-Черкесия</h2>
-								<button type="button" aria-label="Нравится" class="button button_type_like"></button>								
-							</div>
-						</li>
 					</ul>
 				</section>
 			</main>
@@ -88,6 +45,16 @@
 				</div>
 			</div>
 	</div>
+
+	<template id="card-template">
+		<li class="card">
+			<img src="./images/elbrus.png" alt="Эльбрус" class="card__image">
+			<div class="card__info">
+				<h2 class="card__title">Эльбрус</h2>
+				<button type="button" aria-label="Нравится" class="button button_type_like"></button>								
+			</div>
+		</li>
+	</template>
 	<script src="./pages/index.js"></script>
 </body>
 </html>
