--- a/index.html
+++ b/index.html
@@ -31,15 +31,28 @@
 			<footer class="footer container">
 				<p class="footer__title">© 2020 Mesto Russia</p>
 			</footer>  
-			<div class="popup">
+			<div class="popup edit-popup">
 				<div class="popup__container container">
-					<button type="button" aria-label="Закрыть" class="button button_type_close"></button>
-					<form class="edit-form" name="edit-form">
-						<div class="edit-form__inner">
+					<button type="button" aria-label="Закрыть" class="button button_type_close button_popup_edit_close"></button>
+					<form class="form edit-form" name="edit-form">
+						<div class="form__inner">
 							<h2 class="popup__title">Редактировать профиль</h2>
-							<input type="text" class="edit-form__field edit-form__field_type_name" name="field_name" placeholder="Имя" required>
-							<input type="text" class="edit-form__field edit-form__field_type_about" name="field_about" placeholder="О себе" required>
+							<input type="text" class="form__text-field edit-form__field_type_name" name="field_name" placeholder="Имя" required>
+							<input type="text" class="form__text-field edit-form__field_type_about" name="field_about" placeholder="О себе" required>
 							<button class="button button_type_save" type="submit">Сохранить</button>
+						</div>
+					</form>
+				</div>
+			</div>
+			<div class="popup add-popup">
+				<div class="popup__container container">
+					<button type="button" aria-label="Закрыть" class="button button_type_close button_popup_add_close"></button>
+					<form class="form add-form" name="add-form">
+						<div class="form__inner">
+							<h2 class="popup__title">Новое место</h2>
+							<input type="text" class="form__text-field add-form__field_type_title" name="field_title" placeholder="Название" required>
+							<input type="text" class="form__text-field add-form__field_type_image-link" name="field_link" placeholder="Ссылка на картинку" required>
+							<button class="button button_type_save" type="submit">Создать</button>
 						</div>
 					</form>
 				</div>
@@ -48,9 +61,9 @@
 
 	<template id="card-template">
 		<li class="card">
-			<img src="./images/elbrus.png" alt="Эльбрус" class="card__image">
+			<img src="" alt="" class="card__image">
 			<div class="card__info">
-				<h2 class="card__title">Эльбрус</h2>
+				<h2 class="card__title"></h2>
 				<button type="button" aria-label="Нравится" class="button button_type_like"></button>								
 			</div>
 		</li>
