--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
 
 	<template id="card-template">
 		<li class="card">
+			<button class="button button_type_delete"></button>
 			<img src="" alt="" class="card__image">
 			<div class="card__info">
 				<h2 class="card__title"></h2>
