--- a/index.html
+++ b/index.html
@@ -61,13 +61,13 @@
 		<div class="popup image-popup">
 			<div class="popup__image-container">
 				<button type="button" aria-label="Закрыть" class="button button_type_close button_popup_image_close"></button>
-				<img src="" alt="" class="card__image card__popup-image">
+				<img src="/" alt="" class="card__image card__popup-image">
 				<h2 class="card__popup-title"></h2>
 			</div>
 		</div>
 		<li class="card">
 			<button class="button button_type_delete"></button>
-			<img src="" alt="" class="card__image card__main-image">
+			<img src="/" alt="" class="card__image card__main-image">
 			<div class="card__info">
 				<h2 class="card__title"></h2>
 				<button type="button" aria-label="Нравится" class="button button_type_like"></button>								
