--- a/index.html
+++ b/index.html
@@ -32,12 +32,12 @@
 	</footer>  
 	<div class="popup edit-popup">
 		<div class="popup__container container">
-			<button type="button" aria-label="Закрыть" class="button button_type_close button_popup_edit_close"></button>
+			<button type="button" aria-label="Закрыть" class="button button_type_close"></button>
 			<form class="form edit-form" name="edit-form">
 				<div class="form__inner">
 					<h2 class="popup__title">Редактировать профиль</h2>
-					<input type="text" class="form__text-field edit-form__field_type_name" name="field_name" placeholder="Имя" required>
-					<input type="text" class="form__text-field edit-form__field_type_about" name="field_about" placeholder="О себе" required>
+					<input type="text" class="form__text-field" id="edit-form__field_type_name" name="field_name" placeholder="Имя" required>
+					<input type="text" class="form__text-field" id="edit-form__field_type_about" name="field_about" placeholder="О себе" required>
 					<button class="button button_type_save" type="submit">Сохранить</button>
 				</div>
 			</form>
@@ -45,12 +45,12 @@
 	</div>
 	<div class="popup add-popup">
 		<div class="popup__container container">
-			<button type="button" aria-label="Закрыть" class="button button_type_close button_popup_add_close"></button>
+			<button type="button" aria-label="Закрыть" class="button button_type_close"></button>
 			<form class="form add-form" name="add-form">
 				<div class="form__inner">
 					<h2 class="popup__title">Новое место</h2>
-					<input type="text" class="form__text-field add-form__field_type_title" name="field_title" placeholder="Название" required>
-					<input type="text" class="form__text-field add-form__field_type_image-link" name="field_link" placeholder="Ссылка на картинку" required>
+					<input type="text" class="form__text-field" id="add-form__field_type_title" name="field_title" placeholder="Название" required>
+					<input type="text" class="form__text-field" id="add-form__field_type_link" name="field_link" placeholder="Ссылка на картинку" required>
 					<button class="button button_type_save" type="submit">Создать</button>
 				</div>
 			</form>
