--- a/index.html
+++ b/index.html
@@ -112,14 +112,14 @@
       </div>
     </div>
     <div class="popup image-popup">
-      <div class="popup__image-container">
+      <div class="image-popup__container">
         <button
           type="button"
           aria-label="Закрыть"
           class="button button_type_close"
         ></button>
-        <img src="/" alt="" class="card__image card__popup-image" />
-        <h2 class="card__popup-title"></h2>
+        <img src="/" alt="" class="image-popup__image" />
+        <h2 class="image-popup__title"></h2>
       </div>
     </div>
 
