--- a/index.html
+++ b/index.html
@@ -52,13 +52,12 @@
           aria-label="Закрыть"
           class="button button_type_close"
         ></button>
-        <form class="form edit-form" name="edit-form">
+        <form class="form" name="edit-form">
           <div class="form__inner">
             <h2 class="popup__title">Редактировать профиль</h2>
             <input
               type="text"
               class="form__text-field"
-              id="edit-form__field_type_name"
               name="field_name"
               placeholder="Имя"
               required
@@ -66,7 +65,6 @@
             <input
               type="text"
               class="form__text-field"
-              id="edit-form__field_type_about"
               name="field_about"
               placeholder="О себе"
               required
@@ -85,13 +83,12 @@
           aria-label="Закрыть"
           class="button button_type_close"
         ></button>
-        <form class="form add-form" name="add-form">
+        <form class="form" name="add-form">
           <div class="form__inner">
             <h2 class="popup__title">Новое место</h2>
             <input
               type="text"
               class="form__text-field"
-              id="add-form__field_type_title"
               name="field_title"
               placeholder="Название"
               required
@@ -99,7 +96,6 @@
             <input
               type="text"
               class="form__text-field"
-              id="add-form__field_type_link"
               name="field_link"
               placeholder="Ссылка на картинку"
               required
