--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         </form>
       </div>
     </div>
-    <div class="popup add-popup">
+    <div class="popup add-popup" >
       <div class="popup__container container">
         <button
           type="button"
@@ -158,7 +158,8 @@
         </div>
       </li>
     </template>
-    <script src="./vendor/validate.js"></script>  
+    <script src="./scripts/initial-cards.js"></script>
+    <script src="./scripts/validate.js"></script>  
     <script src="./pages/index.js"></script>
   </body>
 </html>
