--- a/index.html
+++ b/index.html
@@ -158,8 +158,6 @@
         </div>
       </li>
     </template>
-    <script src="./scripts/initial-cards.js"></script>
-    <script src="./scripts/validate.js"></script>  
-    <script src="./pages/index.js"></script>
+    <script type="module" src="./scripts/index.js"></script>
   </body>
 </html>
