--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,6 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./pages/index.css" />
     <title>Mesto</title>
   </head>
   <body class="page">
@@ -17,7 +16,7 @@
     <main class="main container">
       <section class="profile">
         <img
-          src="./images/profile-picture.png"
+          src="<%=require('./images/profile-picture.png')%>"
           class="avatar"
           alt="Картинка профиля"
         />
@@ -158,6 +157,5 @@
         </div>
       </li>
     </template>
-    <script type="module" src="./scripts/index.js"></script>
   </body>
 </html>
