--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
         <div class="avatar">
 
           <img
-            src=""
+            src="/"
             class="avatar__image"
             alt="Картинка профиля"
           />
